@@ -1,7 +1,6 @@
 Bugs to fix:
 
 - :<range><command> can't have a space before the command.
-- 5dw on /1/2/3 deletes way too much.
 - can't delete empty lines at end of file.
 - Show message after shifting lines with :< or :>
 - Replace mode - fix cursor. Can't figure out how to keep block cursor.
