@@ -10,6 +10,7 @@ Bug Fixes
 - Fixed <count><word motion> which didn't always match doing <count>
   independent <word motion> commands.
 - Fixed <count>cw on strings such as 1/2/3.
+- Fixed <count>dw which could delete <count> lines instead.
 
 0.7.0 to 0.7.1
 
